--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 *{
-    margin:0;
-    padding:0;
+    
     box-sizing: border-box;
 
 }
 
 
 
+body{
 
+    margin:0;
+    min-height: 100vh;
+
+
+
+}
 
 
 p{
@@ -34,12 +40,41 @@ h2{font-family: "EB Garamond", sans-serif;
 }
 
 
+
+h5{
+    font-family: "EB Garamond", sans-serif;
+    font-style: bold;
+    font-size: medium;
+    text-align: left;
+    margin-top: 1rem;
+
+
+
+
+}
+
+
+h6{font-family: "EB Garamond", sans-serif;
+    font-size: medium;
+    text-align: center;
+
+
+
+
+
+}
+
+
+
+
 footer{
 
     padding: 2rem;
     background-color: rgb(59, 97, 114);
     color: rgb(255, 255, 255);
-
+    
+    bottom:0;
+    
 }
 
 
@@ -156,7 +191,8 @@ footer{
 
     width:100%;
     
-    padding:10px;
+    padding:2rem;
+    padding-left: 2rem;
     
 
 
@@ -220,6 +256,177 @@ footer{
 
 }
   
+/* modalen */
+.modal{
+
+
+display:flex;
+flex-direction: column;
+justify-content: center;
+gap: 4px;
+width:80%;
+padding: 1rem;
+min-height:4rem;
+position:absolute;
+border-radius: 21rem;
+top:12%;
+left:10%;
+color: aliceblue;
+
+background-color: rgb(59, 97, 114);
+border:1px solid  rgba(252,70,107);
+border-radius: 4%;
+z-index: 2;
+
+
+
+}
+
+.modal .flex{
+
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+
+
+
+
+}
+
+.modal input{
+
+    padding: 0.7rem 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size:0.9rem;
+
+
+
+}
+
+
+
+.btn-submit{
+
+
+    color: aliceblue;
+    font-family: "Cinzel Decorative";
+    width: 100%;
+    height: 4rem;
+    text-align:center;
+    font-size: larger;
+   
+    background:  rgb(59, 97, 114) ;
+
+
+
+
+}
+
+
+.btn-submit:hover{
+
+
+    background: rgb(252,70,107);
+    background: radial-gradient(circle, rgba(252,70,107,1) 0%,  rgb(59, 97, 114) 29%);
+
+
+
+}
+
+
+
+
+
+
+  .btn-open {
+
+
+    font-family: "Cinzel Decorative";
+   
+    text-align:center;
+
+    cursor:pointer;
+    border:none;
+    
+    
+    display: inline-block;
+    padding: 0.8rem 1.4rem;
+    
+    background-color: rgb(59, 97, 114);
+    color: rgb(245, 227, 241);
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1em;
+    
+  }
+
+
+  .btn-open:hover {
+
+    background: rgb(252,70,107);
+    background: radial-gradient(circle, rgba(252,70,107,1) 0%,  rgb(59, 97, 114) 29%);
+}
+
+
+  
+  .btn-close {
+    
+    right: -2%;
+    position:absolute;
+    padding: 0.5rem 0.7rem;
+    background: radial-gradient(circle, rgba(252,70,107,1) 0%,  rgb(59, 97, 114) 90%);
+    border-radius: 10%;
+  }
+
+
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
+    z-index: 1;
+  }
+
+
+
+
+  .portDiv{
+
+    background-color:  rgb(59, 97, 114);
+    border-width: 2px;
+    border-style: solid;
+    border-color:rgba(252,70,107,1);
+    border-radius: 0.5rem;
+    padding: 2em;
+    color: rgb(222, 226, 230);
+    max-width: 80%;
+    
+    text-align: center;
+    align-self: center;
+    margin-left: 10%;
+
+
+  }
+
+
+
+  .hidden{
+
+
+
+    display:none;
+  }
+
+
+
+
 
 
 
@@ -300,7 +507,9 @@ footer{
 
     
     
-    padding:10px;
+    padding:2rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
     
 
 
@@ -314,7 +523,21 @@ footer{
 
 
 
+.modal{
 
+
+  
+    width:20rem;
+    padding: 0.3;
+    min-height:4rem;
+    position:absolute;
+    top:12%;
+    left:40%;
+   
+    
+    
+    
+    }
 
 
 
